# RoboCamCal

./: CMakeLists.txt  README.md  calib_stereo.cpp  camcalibration.cpp  camera_calibration.cpp  detect_markers.cpp  hand_eye.cpp  handeye_calibration.cpp  package.xml  stereo_calibration.cpp  temp_test.cpp
board/: marker.info
config/: AcircleBoard.yml  board.yml
doc/: hand_eye.md
src/: BoardDetector.cpp  BoardDetector.hpp  CVUtils.hpp  CVVpConversion.hpp  CalibCommon.cpp  CalibCommon.hpp  CalibController.hpp  CalibViewer.cpp  CalibViewer.hpp  CalibrationCommon.cpp  CalibrationCommon.hpp  CalibrationController.cpp  CalibrationController.hpp  CalibrationViewer.cpp  CalibrationViewer.hpp  CameraBridge.hpp  CameraCalibController.cpp  CameraCalibController.hpp  ConversionUtils.hpp  FrameCapturer.cpp  FrameCapturer.hpp  HandEyeCalibController.cpp  HandEyeCalibController.hpp  RobotBridge.hpp  StereoCalibController.cpp  StereoCalibController.hpp  VispUtils.hpp  calibPipeline.cpp  cvvpconversion.hpp  cxxopts.hpp  frameProcessor.cpp  mathutils.hpp  parametersController.cpp
srv/: CameraData.srv  RobotPose.srv
test/: camera_bridge_test.cc
